# flask_zero

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml
flask_zero/: app.py  auth.py  models.py  users.py
flask_zero/routers/: auth.py  users.py
flask_zero/schemas/: user.py
migrations/: env.py
migrations/versions/: 2c33127f1015_initial_migration.py  9831d7a59ae3_add_role.py  9af8fc51ce15_initial_migration.py  e00ff2f5b171_muda_campos_de_input.py  f9c225163fdf_set_default_role_for_existing_users.py
